# snake-game-v2

./: .env  .gitignore  Cargo.toml  README.md  db.sql
common/: Cargo.toml
common/src/: lib.rs
esp32s3/: platformio.ini
esp32s3/src/: config.example.h  main.cpp  network.h  protocol.h
snake-game-client/: package.json  pnpm-lock.yaml  vite.config.js
snake-game-client/src/: App.vue  style.css
snake-game-client/src-tauri/: Cargo.toml  tauri.conf.json
snake-game-client/src-tauri/icons/: icon.icns
snake-game-client/src-tauri/src/: main.rs
snake-game-client/src/components/auth/: AuthForm.vue  ServerAddressInput.vue
snake-game-client/src/components/game/: ArcadeDecor.vue  GameBottomBar.vue  GameCanvas.vue  GameOverModal.vue  GameTopBar.vue  ScorePanel.vue
snake-game-client/src/components/layout/: BgLayer.vue  GameHeader.vue
snake-game-client/src/components/lobby/: CreateRoomCard.vue  LeaderboardCard.vue  PlayerConfigCard.vue  RoomListCard.vue
snake-game-client/src/components/room/: CircularSpeedControl.vue  PlayerListCard.vue  RoomActionButtons.vue  RoomInfoBar.vue  TournamentBracket.vue
snake-game-client/src/composables/: useAuth.js  useGame.js  useGameplay.js  useRoom.js  useTournament.js
snake-game-client/src/network/: gameStream.js
snake-game-client/src/views/: AuthView.vue  GameView.vue  LobbyView.vue  RoomView.vue
snake-game-server/: Cargo.toml
snake-game-server/src/: game.rs  handlers.rs  main.rs  room.rs  ws.rs
test/: GameManager.vue  ws-1.rs
